Fix navbar click problem on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -101,7 +101,7 @@ nav {
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 999999999;
+	z-index: 9;
 
 	width: 90%;
 	margin: auto;
@@ -209,7 +209,7 @@ nav ul li {
 	padding-top: 0;
 
 	margin-top: 0.15em;
-	z-index: 1;
+	z-index: 99;
 	opacity: 0.8;
 	top: 0;
 	left: 0;
